# Chatcommercial

./: README.md
backend/: .env  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: endpoints.py  schemas.py
backend/app/core/: config.py  language_processing.py
backend/app/data/: dataset.json
backend/app/services/: chatbot_service.py
singlishchatbot/: .env  package-lock.json  package.json
singlishchatbot/src/components/: ChatWindow.jsx  LanguageSelector.jsx
singlishchatbot/src/pages/: index.jsx
singlishchatbot/src/services/: api.js
