[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aanish Rizmy <aanishrizmy28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
langchain = "^0.2.16"
qdrant-client = "^1.11.1"
langchain-community = "^0.2.16"
python-decouple = "^3.8"
torch = "^2.4.1"
transformers = "^4.44.2"
langdetect = "^1.0.9"
fastapi-cors = "^0.0.6"
spacy = "^3.7.6"
pydantic = "^2.9.1"
watchfiles = "^0.24.0"
nltk = "^3.9.1"
websockets = "^13.0.1"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
